<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodLik</string>
    <string name="google_maps_key">AIzaSyCJpWZT2a6TrrdjvgbdAdBOznuBYEJut-k</string>
    <string name="nav_restaurants">Restaurants</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_tracking">Map</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="restaurants_title">Restaurants</string>
    <string name="home_greeting">Food delivered fast</string>
    <string name="delivery_to">Delivering to</string>
    <string name="search_restaurants">Search restaurants or dishes</string>
    <string name="category_all">All</string>
    <string name="category_fast_food">Fast food</string>
    <string name="category_sushi">Sushi</string>
    <string name="category_moroccan">Moroccan</string>
    <string name="category_pizza">Pizza</string>
    <string name="top_restaurants">Top restaurants near you</string>
    <string name="cart_title">Your cart</string>
    <string name="tracking_title">Map</string>
    <string name="map_restaurants_count">%1$d restaurants on the map</string>
    <string name="map_restaurants_near_user">%1$d restaurants near your location</string>
    <string name="map_waiting_for_location">Finding your location...</string>
    <string name="map_location_permission_denied">Location permission denied - showing demo address restaurants</string>
    <string name="map_your_location">Your location</string>
    <string name="map_unavailable">Map unavailable on this device</string>
    <string name="history_title">Order history</string>
    <string name="settings_title">Settings</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="checkout">Place order</string>
    <string name="call_driver">Call driver</string>
    <string name="sms_driver">SMS driver</string>
    <string name="capture_delivery">Photo</string>
    <string name="advance_status">Next status</string>
    <string name="upload_photo">Upload photo</string>
    <string name="customer_phone">Customer phone</string>
    <string name="delivery_address">Delivery address</string>
    <string name="item_of_day">Item of the day</string>
    <string name="add_item_of_day">Add item of the day</string>
    <string name="all_items">All items</string>
    <string name="add">Add</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="view_menu">View menu</string>
    <string name="restaurant_phone_format">Phone: %1$s</string>
    <string name="call_restaurant">Call</string>
    <string name="sms_restaurant">Message</string>
    <string name="restaurant_sms_body">Hello %1$s, I would like to ask about my order.</string>
    <string name="no_phone_app">No phone app available</string>
    <string name="no_sms_app">No SMS app available</string>
    <string name="notif_channel_orders">Order status</string>
    <string name="notif_channel_orders_desc">FoodLik order status updates</string>
    <string name="widget_empty">No active order</string>
    <string name="connectivity_offline">No internet connection - order position may be stale.</string>
    <string name="tracking_live">Live</string>
    <string name="tracking_updated">Updated %1$s</string>
    <string name="tracking_eta">%1$d min away</string>
    <string name="tracking_stage_waiting">Waiting</string>
    <string name="tracking_stage_on_the_way">On the way</string>
    <string name="tracking_stage_delivered">Delivered</string>
    <string name="history_section_today">TODAY</string>
    <string name="settings_profile_name">Delivery contact</string>
    <string name="settings_profile_email">demo@foodlik.ma</string>
    <string name="settings_section_account">Account</string>
    <string name="settings_section_delivery">Delivery</string>
    <string name="search_no_results">No results found</string>
    <string name="search_results">Search results</string>
    <string name="category_restaurants_format">%1$s Restaurants</string>
    <string name="filter_dishes">Popular Dishes</string>
    <string name="filter_cuisines">Cuisines</string>

    <string name="login_welcome">Welcome Back</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_guest_button">Continue as Guest</string>
    <string name="login_signup_redirect">Don\'t have an account? Sign Up</string>
    <string name="signup_title">Create Account</string>
    <string name="signup_name_hint">Full Name</string>
    <string name="signup_button">Sign Up</string>
    <string name="signup_login_redirect">Already have an account? Login</string>
    <string name="logout_button">Logout</string>
    <string name="profile_guest_name">Guest User</string>
    <string name="profile_guest_email">guest@foodlik.ma</string>
</resources>
